# urinterfaces

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: industrial_ci.yml  pre-commit.yml
action/: SetMode.action
msg/: Analog.msg  ControlCycle.msg  Current.msg  DigitalPort.msg  JointMode.msg  JointTemperature.msg  JointVoltage.msg  JsonStringType.msg  ProgramState.msg  RobotMode.msg  RuntimeState.msg  SafetyStatus.msg  SharedVariablesEditResponse.msg  SpeedSliderFraction.msg  TCPState.msg  ToolOutputMode.msg  VariableUpdate.msg  VoltageCurrentStamped.msg  WorldModelNames.msg
srv/: GetProgramState.srv  GetSafetyMode.srv  SetAnalogOutput.srv  SetDigitalOutput.srv  SetPayload.srv  SetSpeedFraction.srv  SharedVariablesEditor.srv  VariablesViewer.srv
